--- a/Fundoo-Notes-APIs/package.json
+++ b/Fundoo-Notes-APIs/package.json
@@ -1,11 +1,12 @@
 {
   "name": "fundoo-notes-apis",
   "version": "1.0.0",
-  "description": "Fundoo-Notes-API is like( google keep app ). Developing this API to all note with leble and all stuff like google keep app",
+  "description": "Fundoo-Notes-API is like( google keep app ). Developing this API to Keep all note with leble and all stuff like google keep app. To buil this app i am using Node.js Express.js MongoDB And mongoose",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "test": "mocha"
   },
   "keywords": [
     "Express",
@@ -18,10 +19,13 @@
     "bcrypt": "^5.0.1",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^9.1.1",
     "mongoose": "^6.0.5",
     "nodemon": "^2.0.12"
   }
