--- a/Fundoo-Notes-APIs/package.json
+++ b/Fundoo-Notes-APIs/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^8.5.1",
     "mocha": "^9.1.1",
     "mongoose": "^6.0.5",
+    "nodemailer": "^6.6.5",
     "nodemon": "^2.0.12",
     "swagger-jsdoc": "^6.0.0",
     "swagger-ui-express": "^4.1.6",
