--- a/Fundoo-Notes-APIs/package.json
+++ b/Fundoo-Notes-APIs/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.19.0",
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "faker": "^5.5.3",
@@ -33,6 +34,7 @@
     "nodemon": "^2.0.12",
     "swagger-jsdoc": "^6.0.0",
     "swagger-ui-express": "^4.1.6",
+    "underscore": "^1.13.1",
     "winston": "^3.3.3"
   },
   "devDependencies": {
