--- a/Fundoo-Notes-APIs/package.json
+++ b/Fundoo-Notes-APIs/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^6.0.5",
     "nodemailer": "^6.6.5",
     "nodemon": "^2.0.12",
+    "redis": "^3.1.2",
     "sinon": "^11.1.2",
     "swagger-jsdoc": "^6.0.0",
     "swagger-ui-express": "^4.1.6",
