--- a/Fundoo-Notes-APIs/package.json
+++ b/Fundoo-Notes-APIs/package.json
@@ -22,9 +22,11 @@
     "body-parser": "^1.19.0",
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
+    "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "faker": "^5.5.3",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
@@ -32,6 +34,8 @@
     "mongoose": "^6.0.5",
     "nodemailer": "^6.6.5",
     "nodemon": "^2.0.12",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
     "redis": "^3.1.2",
     "sinon": "^11.1.2",
     "swagger-jsdoc": "^6.0.0",
