--- a/Fundoo-Notes-APIs/package.json
+++ b/Fundoo-Notes-APIs/package.json
@@ -35,6 +35,7 @@
     "nodemailer": "^6.6.5",
     "nodemon": "^2.0.12",
     "passport": "^0.5.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "redis": "^3.1.2",
     "sinon": "^11.1.2",
